BAP-23008 Fix front-end visibility for "Do not set Default" (#41172)

--- a/src/Oro/Bundle/EntityExtendBundle/Resources/public/css/scss/enum-value-collection.scss
+++ b/src/Oro/Bundle/EntityExtendBundle/Resources/public/css/scss/enum-value-collection.scss
@@ -5,13 +5,18 @@
     width: $field-width;
 
     &__clear-default {
-        position: absolute;
-        bottom: $content-padding-small;
-        right: 0;
+        display: flex;
+        justify-self: end;
 
         &.disabled {
             display: none;
         }
+    }
+
+    &:has(.add-list-item) &__clear-default {
+        position: absolute;
+        bottom: $content-padding-small;
+        right: 0;
     }
 
     .controls & {
